# SungrowInverterOpenWRT

./: README.md  requirements.txt  setup.cfg  test.py
sungrowinverter/: SungrowInverter.py  SungrowModbusTCPClient.py  __init__.py
sungrowinverter/configs/: hybrid.py  inverter.py  string.py
