[metadata]
name = SungrowInverter
version = 0.2.0
author = Mark Vandersteen, Jonathan Tito
author_email = mark@vandersteen.me, jonathan.e.tito.o@gmail.com
description = A client to allow access to a Sungrow inverter modbus parameters (read only) on OpenWRT.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sungrow, inverter, modbus, tcp
url = https://github.com/mvandersteen/SungrowInverter
project_urls =
    Bug Tracker = https://github.com/mvandersteen/SungrowInverter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
packages =
    sungrowinverter
    sungrowinverter/configs
python_requires = >=3.9
install_requires=
    pymodbus == 3.1.3
    pycryptodomex == 3.10.1

[options.packages.find]
where = sungrowinverter
